[package]
name = "curtain"
version = "0.2.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]


[[bin]]
name = "iron_curtain"




[dependencies]
hyper = "0.8"
rustc-serialize = "0.3"
uuid = "0.2"
iron = "0.3"
mount = "0.1"
router = "0.1"
persistent = "0.1"
rand = "0.3"
log = "0.3"
env_logger = "0.3"
unicase = "1.4"
regex = "0.1"
regex_macros = "0.1"
chrono = {version = "0.2", features = ["rustc-serialize"]}

[dependencies.inquerest]
version = "0.0.9"
path = "../inquerest"

[dependencies.rustorm]
version = "^0.5"
path = "../rustorm"





