[package]
name = "curtain"
version = "0.2.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]


[[bin]]
name = "iron_curtain"




[dependencies]
hyper = "0.8"
rustc-serialize = "0.3"
uuid = {version = "0.3", features = ["v4"]}
iron = "0.3"
mount = "0.1"
router = "0.1"
persistent = "0.1"
rand = "0.3"
log = "0.3"
env_logger = "0.3"
unicase = "1.4"
chrono = {version = "0.2", features = ["rustc-serialize"]}

[dependencies.inquerest]
version = "0.1"
#path = "../inquerest"

[dependencies.rustorm]
version = "0.5"
#path = "../rustorm"
#features = ["sqlite"]





